# gen-changelog

./: AGENTS.md  CHANGELOG.md  Cargo.toml  PRLOG.md  README.md  README.md-1uu9Qt  build.rs  gen-changelog.toml  justfile  release-hook.sh  release.toml  sonar-project.properties
.circleci/: config.yml  release.yml  update_prlog.yml
crates/gen-changelog/: CHANGELOG.md  Cargo.toml  README.md  my-config.toml  release-hook.sh  release.toml
crates/gen-changelog/benches/: config_log.rs
crates/gen-changelog/docs/: lib.md  main.md
crates/gen-changelog/docs/readme/: head.md
crates/gen-changelog/src/: change_log.rs  error.rs  lib.rs  main.rs  package.rs  test_utils.rs
crates/gen-changelog/src/cli/: config_cli.rs  generate_cli.rs
crates/gen-changelog/src/generate_cli/: package.rs
crates/gen-changelog/src/lib/: change_log.rs  change_log_config.rs  error.rs  lib.rs  package.rs  test_utils.rs
crates/gen-changelog/src/lib/change_log/: section.rs  tag.rs
crates/gen-changelog/src/lib/change_log/section/: cc_commit.rs
crates/gen-changelog/src/lib/change_log_config/: group.rs  group_mgmt.rs  heading_mgmt.rs  heading_serde.rs  test_config_serialization.rs
crates/gen-changelog/tests/cmd/: help.trycmd
docs/: lib.md  main.md
docs/pdf/: help.md
docs/readme/: head.md  lib.md
examples/: demo_headings.rs
src/: change_log.rs  change_log_config.rs  config.rs  config_cli.rs  error.rs  generate_cli.rs  lib.rs  main.rs
src/change_log/: header.rs  link.rs  section.rs  tag.rs
src/change_log/section/: cc_commit.rs  change_log_class.rs  markdown_link.rs  section_header.rs
src/change_log_config/: group.rs  heading_serde.rs  test_config_serialization.rs
src/config/: group.rs  group_mgmt.rs  heading_mgmt.rs
src/generate_cli/: package.rs
