[package]
name = "gen-changelog"
description = """Generate a change log based on the git commits compatible
with keep-a-changelog and using conventional commits to categorise commits."""
version = "0.1.4"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
edition = "2024"
rust-version = "1.87"
keywords = ["keep-a-changelog", "conventional-commits", "changelog"]
categories = ["development-tools", "command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jerus-org/gen-changelog"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "CHANGELOG.md",
    "docs",
]

[dependencies]
chrono = { version = "0.4.42", features = ["alloc"] }
clap = { version = "4.5.54", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.8"
git2 = "0.20.3"
lazy-regex = "3.5.1"
log = "0.4.29"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
thiserror = "2.0.17"
titlecase = "3.6.0"
toml = { version = "0.9.11", features = ["serde", "display"] }
url = "2.5.8"

[dev-dependencies]
copy_dir = "0.1.3"
criterion = "0.8.1"
rstest = "0.26.1"
serde_test = "1.0.177"
snapbox = "0.6.24"
tempfile = "3.24.0"
trycmd = "0.15.11"
uuid = { version = "1.19.0", features = ["v4"] }

[lints.clippy]
uninlined-format-args = "warn"
unnecessary_semicolon = "warn"

[lints.rust]
dead-code = "allow" # allow temporarily while developing initial code

[lib]
name = "gen_changelog"
path = "src/lib.rs"

[[bin]]
name = "gen-changelog"
path = "src/main.rs"

[[bench]]
name = "config_log"
harness = false
