[workspace]
members = ["crates/gen-changelog"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
rust-version = "1.87"
repository = "https://github.com/jerus-org/gen-changelog"

[workspace.dependencies]
cargo_toml = "1.0.0"
chrono = { version = "0.4.45", features = ["alloc"] }
clap = { version = "4.6.4", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.11"
git2 = "0.21.0"
lazy-regex = "3.6.0"
log = "0.4.33"
semver = "1.0.28"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
thiserror = "2.0.19"
titlecase = "3.6.0"
toml = { version = "1.1.3", features = ["serde", "display"] }
url = "2.5.8"

# Dev dependencies
copy_dir = "0.1.3"
criterion = "0.8.2"
rstest = "0.26.1"
serde_test = "1.0.177"
snapbox = "1.2.2"
tempfile = "3.27.0"
trycmd = "1.2.1"
uuid = { version = "1.24.0", features = ["v4"] }

[workspace.lints.clippy]
uninlined-format-args = "warn"
unnecessary_semicolon = "warn"

[workspace.lints.rust]
dead-code = "allow" # allow temporarily while developing initial code
